# napari-lif-loader

./: MANIFEST.in  pyproject.toml
src/napari_lif_loader/: __init__.py  _widget.py  napari.yaml
src/napari_lif_loader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
